--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
-    "dayjs": "^1.10.3",
+    "dayjs": "^1.10.4",
     "dayjs-plugin-utc": "^0.1.2",
     "faunadb": "^4.0.3",
     "jest-canvas-mock": "^2.3.0",
     "material-table": "^1.69.2",
-    "next": "latest",
+    "next": "^10.0.6",
     "node-mocks-http": "^1.10.0",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.11.1",
