--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test": "jest",
     "test-all": "npm run lint && npm run type-check && npm run test -- --coverage",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "husky": {
     "hooks": {
@@ -72,6 +74,7 @@
     "@typescript-eslint/parser": "^2.25.0",
     "babel-jest": "^25.2.3",
     "babel-loader": "^8.2.2",
+    "cypress": "^7.7.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-react": "^7.19.0",
