--- a/.github/workflows/upload_slack.yml
+++ b/.github/workflows/upload_slack.yml
@@ -26,4 +26,4 @@ jobs:
         env:
           IMGUR_CLIENT_ID: ${{ secrets.IMGUR_CLIENT_ID }}
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        run: deno run scripts/uploadScreenShot.js
+        run: deno run scripts/uploadScreenShot.ts
