--- a/.github/workflows/upload_slack.yml
+++ b/.github/workflows/upload_slack.yml
@@ -18,6 +18,10 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: 'v1.x'
+      - name: Set Timezone
+        uses: szenius/set-timezone@v1.0
+        with:
+          timezoneLinux: "Asia/Tokyo"
       - name: npm install
         run: npm install
       - name: run cypress
