--- a/.github/workflows/set.yml
+++ b/.github/workflows/set.yml
@@ -5,8 +5,8 @@ on:
   push:
     branches:
       - main
-  schedule:
-    - cron: '0/30 * * * *'
+  # schedule:
+  #   - cron: '0/30 * * * *'
 
 jobs:
   SetNetatmoData30min:
