--- a/.github/workflows/upload_slack.yml
+++ b/.github/workflows/upload_slack.yml
@@ -5,8 +5,8 @@ on:
   push:
     branches:
       - main
-  schedule:
-    - cron: '0 * * * *'
+  # schedule:
+  #   - cron: '0 * * * *'
 
 jobs:
   UploadSlack:
